--- a/presentation/2d.tex
+++ b/presentation/2d.tex
@@ -48,7 +48,7 @@
 
 \begin{frame}
   \frametitle{2-D MSRE Neutronics Simulation Results}
-  \textbf{2-D Quarter-Core $k$ \& Rod Worth Results}
+  \textbf{2-D Quarter-Core $\bm{k}$ \& Rod Worth Results}
   \begin{table}[htb]
     \small
     \centering
@@ -101,7 +101,7 @@
 
 \begin{frame}
   \frametitle{2-D MSRE Neutronics Simulation Results}
-  \textbf{2-D Quarter-Core Normalized Fuel Channel Power Distribution}
+  \textbf{2-D Quarter-Core Normalized Channel Fission Rate Distribution}
   \begin{table}[htb]
     \small
     \centering
@@ -157,7 +157,7 @@
 
 \begin{frame}
   \frametitle{2-D MSRE Neutronics Simulation Results}
-  \textbf{2-D Full-Core Normalized Fuel Channel Power Distribution}
+  \textbf{2-D Full-Core Normalized Channel Fission Rate Distribution}
   \begin{table}[htb]
     \footnotesize
     \centering
@@ -179,7 +179,7 @@
   \vspace{.2cm}
 
   \begin{itemize}
-    \item Mean percentage error for the hybrid method remains consistent at 0.43 \%.
+    \item Mean percentage error for the hybrid method remains consistent at 0.43\%.
     \item Significant improvement in maximum percentage error of the channel fission rate.
   \end{itemize}
 \end{frame}
