--- a/presentation/3d-transient.tex
+++ b/presentation/3d-transient.tex
@@ -51,7 +51,7 @@
       \item Steep initial decline in neutron count rate as the rod drops
       \item Decline in neutron count rate slows at $t=0.5$ s due to presence of DNPs
       \item Convergence issues prevented the simulation from converging from $t = 0.8$ s
-      \item I raised the convergence tolerance to help the simulation continue
+      \item Raised the convergence tolerance value after $t=0.8$ s to help the simulation continue
     \end{itemize}
   \end{columns}
 %  \begin{itemize}
@@ -78,7 +78,7 @@
     \end{figure}
     \column{5.5cm}
     \begin{itemize}
-      \item Moltres reproduces the expected trend in the integral neutron count rate
+      \item Moltres reproduces the expected trend in the integral neutron count rate.
       \item Slight underprediction relative to MSRE rod drop experimental data
       \item Underprediction may be due to experimental uncertainty in $^{235}$U concentration,
         initial \& final rod height, initial neutron count rate.
