--- a/presentation/3d.tex
+++ b/presentation/3d.tex
@@ -101,7 +101,7 @@
     \end{tabular}
     \label{table:rod-worth}
   \end{table}
-  \vspace{.2cm}
+  \vspace{.1cm}
 
   Slight overprediction by OpenMC and the hybrid method due to approximating the control rod
   as an annular cylinder instead of beaded rod elements.
@@ -131,8 +131,8 @@
       strict memory requirements (significant improvements in memory use is possible) and took 2.2
       h to complete.
     \item The hybrid method took about four times longer than the neutron diffusion method.
-    \item 30 \% of compute time spent on data transfers between the neutron diffusion and $S_N$
-      subsolvers (Reduced to 18 \% in subsequent simulations after optimizations)
+    \item 30\% of compute time spent on data transfers between the neutron diffusion and $S_N$
+      subsolvers (reduced to 18\% in subsequent simulations after optimizations).
   \end{itemize}
 \end{frame}
 
