--- a/presentation/msr.tex
+++ b/presentation/msr.tex
@@ -20,7 +20,7 @@
   \frametitle{Molten Salt Reactor Modeling \& Simulation}
   \textbf{What is a Molten Salt Reactor (MSR)?}
   \begin{itemize}
-	\item MSRs are advanced nuclear reactor fueled by fissile
+	\item MSRs are advanced nuclear reactors fueled by fissile
 	  material dissolved in a molten salt mixture.
     \item While modeling MSRs is not necessarily more difficult than modeling solid-fueled
       reactors, we must adapt our software tools to accurately model phenomena unique to MSRs.
