--- a/presentation/msre-transients.tex
+++ b/presentation/msre-transients.tex
@@ -17,14 +17,14 @@
     \begin{figure}
       \centering
       \includegraphics[width=.8\columnwidth]{images/msre-startup}
-      \caption{MSRE start-up pump speed and flow rate experimental data
+      \caption{MSRE start-up pump speed and flow rate
       \cite{prince_zero-power_1968}.}
     \end{figure}
     \column{5.5cm}
     \begin{figure}
       \centering
       \includegraphics[width=.95\columnwidth]{images/msre-coastdown}
-      \caption{MSRE coast-down pump speed and flow rate experimental data
+      \caption{MSRE coast-down pump speed and flow rate
       \cite{prince_zero-power_1968}.}
     \end{figure}
   \end{columns}
@@ -76,7 +76,7 @@
     \column{4.5cm}
     \begin{figure}[htb]
       \centering
-      \includegraphics[width=0.8\columnwidth]{images/msre-2d}
+      \includegraphics[width=0.8\columnwidth]{images/msre-2d-pres}
       \caption{2-D axisymmetric model of the \gls{MSRE}.The gray and white regions represent fuel salt
       and graphite, respectively. Fuel salt channels are 1.25-cm wide and spaced at 5-cm intervals.}
       \label{fig:pump-geom}
