--- a/presentation/review.tex
+++ b/presentation/review.tex
@@ -1,5 +1,8 @@
 \begin{frame}
-  \frametitle{Transport-Correction Techniques For Neutron Diffusion-Based Solvers}
+  \frametitle{Literature Review}
+  \textbf{Transport-Correction Techniques For Neutron Diffusion-Based Solvers}
+  \vspace{.2cm}
+
   Techniques for augmenting the neutron diffusion method (or equivalent low-order equations) with
   corrections derived from neutron transport:
   \begin{itemize}
@@ -130,7 +133,7 @@
     \cite{reynolds_analysis_2023}.}
     \label{fig:reynolds-flux}
   \end{figure}
-  \textbf{Limitation: Computational expensive for 3-D full-core simulations.}
+  \textbf{Limitation: Computationally expensive for 3-D full-core simulations.}
 \end{frame}
 
 \begin{frame}
@@ -183,12 +186,13 @@
   %
   The transport subdomains require interface conditions in the form of boundary sources from
   neighboring diffusion subdomains.
+  \vspace{.2cm}
 
   \textbf{Limitation: Complicated implementation and management of computational resources.}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Hybrid $S_N$-Diffusion Method: Literature Review}
+  \frametitle{Literature Review}
   \begin{block}{\textbf{Summary}}
     \begin{itemize}
       \item Corrective terms for the neutron diffusion equations in various forms have been
