--- a/presentation/future.tex
+++ b/presentation/future.tex
@@ -1,15 +1,15 @@
 \begin{frame}
-  \begin{block}{\textbf{Future Work}}
+  \frametitle{Conclusion}
+  \begin{block}{\textbf{Potential Extensions to this Work}}
     \textbf{Extend the Spalart-Allmaras turbulence model implementation}
       \begin{itemize}
         \item Investigate more effective preconditioning schemes beyond the
           current additive Schwarz method
         \item Implement wall functions to reduce fine mesh requirements near the wall for high
-          Reynolds flows (Re$\approx 10^6$)
+          Reynolds flows (Re $\approx 10^6$)
       \end{itemize}
     \textbf{Improve the computational performance of the hybrid $S_N$-diffusion method}
       \begin{itemize}
-        \item General code optimizations
         \item Reduce compute and memory use through shared FEM Jacobian evaluations for all angular
           fluxes at the same position
         \item Custom mesh distribution and data transfer caching routines to minimize data transfer time
